# lp_analysis

./: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  README.md  REPORT.md  aave_yield__usdc__hedge_demand__2025-06-01__to__2025-09-01.md  aave_yield__usdc__hedge_demand__2025-08-01__to__2025-08-25.md  aave_yield__usdc__hedge_demand__2025-08-01__to__2025-09-01.md  aave_yield__usdc__hedge_std__2025-08-01T000000__to__2025-08-25T000000.md  aave_yield__usdc__hedge_std__2025-08-01__to__2025-08-25.md  aave_yield__usdc__hedge_std__2025-08-10__to__2025-09-05.md  aave_yield__usdc__hedge_std__2025-09-02__to__2025-09-25.md  aave_yield__usdc__hedge_variance__2025-08-01__to__2025-08-25.md  aave_yield__usdc__hedge_variance__2025-08-10__to__2025-09-01.md  aave_yield__usdc__il_by_window__lt_2025-09-02.csv  aave_yield__usdc__il_by_window__lt_2025-09-03.csv  aave_yield__usdc__il_report__lt_2025-09-02.md  aave_yield__usdc__il_report__lt_2025-09-03.md  aave_yield__usdt__hedge_demand__2025-08-01__to__2025-08-25.md  aave_yield__usdt__hedge_std__2025-07-01__to__2025-08-01.md  aave_yield__usdt__hedge_std__2025-08-01T000000__to__2025-08-25T000000.md  aave_yield__usdt__hedge_std__2025-08-01__to__2025-08-25.md  aave_yield__usdt__hedge_std__2025-08-10T000000__to__2025-09-05T000000.md  aave_yield__usdt__hedge_std__2025-08-10__to__2025-09-05.md  aave_yield__usdt__hedge_std__2025-08-15__to__2025-08-22.md  aave_yield__usdt__hedge_std__2025-09-02__to__2025-09-25.md  aave_yield__usdt__hedge_variance__2025-08-01__to__2025-08-25.md  aave_yield__usdt__il_by_window__lt_2025-09-02.csv  (+79 more)
.old/: README.md  REPORT.md
(+150 files in other folders)
