[project]
name = "lp_analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "distbit", email = "adp01@pm.me"},
]
dependencies = [
    "python-dotenv",
    "loguru",
    "PySnooper",
    "requests",
    "numpy>=2.3.2",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.0",
    "tqdm>=4.67.1",
    "fastparquet>=2024.11.0",
    "scipy>=1.16.1",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
